# her

./: .gitignore  cli_client.py  consolidator_prompt.txt  dummy_vault.py  interlocutor_prompt.txt  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/agents/: agent_factory.py  base_agent.py  chat_agent.py  her_agent.py  search_agent.py  summary_agent.py  vault_agent.py
app/core/: config.py  constants.py  llm.py  prompt_templates.py
app/memory/: cortex.py
app/models/: agent_models.py  memory_models.py  task_model.py
app/routers/: chat_router.py
app/services/: message_handler.py  telegram_service.py  vault_service.py
app/services/firestore/: base.py  tasks_service.py  users_service.py
app/services/llm_services/: gemini_service.py
app/utils/: cache.py  cloud_tasks.py  helper.py  llm_helpers.py  prompts.py
app/workflows/: chat_workflow.py  conversational_workflow.py
