[project]
name = "her"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.11",
    "fastapi>=0.115.6",
    "google-cloud-firestore>=2.20.0",
    "google-cloud-tasks>=2.18.0",
    "google-generativeai>=0.8.3",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "langchain>=0.3.14",
    "langchain-google-genai>=2.0.9",
    "langgraph>=0.2.64",
    "numexpr>=2.10.2",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
    "vertexai>=1.71.1",
]
